--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gabrielbdornas/docker-web-scraping:latest
+      run: docker build . --file Dockerfile --tag gabrielbdornas/docker-web-scraping:1.0.0
     - name: Push the Docker image
-      run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_TOKEN }} && docker push gabrielbdornas/docker-web-scraping:latest
+      run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_TOKEN }} && docker push gabrielbdornas/docker-web-scraping:1.0.0
