--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install packages
+      run: pip install -r requirements.txt
     - name: Build the Docker image
       run: task image
     - name: Push the Docker image
