--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [tool.taskipy.tasks]
-image = { cmd = "docker build . --file Dockerfile --tag gabrielbdornas/docker-web-scraping:1.0.2", help = "Constroi Docker image." }
+image = { cmd = "docker build . --file Dockerfile --progress=plain --no-cache --tag gabrielbdornas/docker-web-scraping:1.0.2", help = "Constroi Docker image." }
 container = { cmd = "docker run -it --rm gabrielbdornas/docker-web-scraping:1.0.2 bash", help = "Inicia Docker container." }
