--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,4 +16,4 @@ jobs:
     - name: Build the Docker image
       run: task image
     - name: Push the Docker image
-      run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_TOKEN }} && docker push -a gabrielbdornas/docker-web-scraping
+      run: task push
